--- a/PingTool/Strings/en-us/Resources.resw
+++ b/PingTool/Strings/en-us/Resources.resw
@@ -126,7 +126,7 @@
     <comment>Application description</comment>
   </data>
   <data name="Shell_Main.Content" xml:space="preserve">
-    <value>Main</value>
+    <value>Ping Test</value>
     <comment>Navigation view item name for Main</comment>
   </data>
   <data name="Settings_Theme.Text" xml:space="preserve">
@@ -145,23 +145,23 @@
     <value>Light</value>
     <comment>Light theme text for Settings</comment>
   </data>
-  <data name="Settings_About.Text" xml:space="preserve">    
+  <data name="Settings_About.Text" xml:space="preserve">
     <value>About this application</value>
     <comment>About this application title for Settings</comment>
   </data>
-  <data name="Settings_AboutDescription.Text" xml:space="preserve">    
+  <data name="Settings_AboutDescription.Text" xml:space="preserve">
     <value>Settings page placeholder text.  Your app description goes here.</value>
     <comment>About this application description for Settings</comment>
   </data>
-  <data name="Settings_PrivacyTermsLink.Content" xml:space="preserve">    
+  <data name="Settings_PrivacyTermsLink.Content" xml:space="preserve">
     <value>Privacy Statement</value>
     <comment>Privacy Statement link content for Settings</comment>
   </data>
-  <data name="Settings_PrivacyTermsLink.NavigateUri" xml:space="preserve">  
+  <data name="Settings_PrivacyTermsLink.NavigateUri" xml:space="preserve">
     <value>https://YourPrivacyUrlGoesHere/</value>
     <comment>Here is your Privacy Statement url for Settings</comment>
   </data>
-  <data name="Settings_Personalization.Text" xml:space="preserve">   
+  <data name="Settings_Personalization.Text" xml:space="preserve">
     <value>Personalization</value>
     <comment>Personalization text for Settings</comment>
   </data>
@@ -183,23 +183,18 @@
   </data>
   <data name="Shell_LogIn.Text" xml:space="preserve">
     <value>Log in</value>
-    <comment></comment>
   </data>
   <data name="Shell_LogOut.Content" xml:space="preserve">
     <value>Log out</value>
-    <comment></comment>
   </data>
   <data name="DialogAuthenticationTitle" xml:space="preserve">
     <value>Application Authentication</value>
-    <comment></comment>
   </data>
   <data name="DialogNoNetworkAvailableContent" xml:space="preserve">
     <value>ApplicatioThere is no internet connection, please connect to the internet and try again.</value>
-    <comment></comment>
   </data>
   <data name="DialogStatusUnknownErrorContent" xml:space="preserve">
     <value>Something went wrong during the login, please try again.</value>
-    <comment></comment>
   </data>
   <data name="Settings_User.Text" xml:space="preserve">
     <value>User</value>
