--- a/PingTool/Strings/en-us/Resources.resw
+++ b/PingTool/Strings/en-us/Resources.resw
@@ -158,7 +158,7 @@
     <comment>Privacy Statement link content for Settings</comment>
   </data>
   <data name="Settings_PrivacyTermsLink.NavigateUri" xml:space="preserve">
-    <value>https://YourPrivacyUrlGoesHere/</value>
+    <value>https://avikeid2007.github.io/Ping-Tool/PrivacyPolicy</value>
     <comment>Here is your Privacy Statement url for Settings</comment>
   </data>
   <data name="Settings_Personalization.Text" xml:space="preserve">
